<resources>
    <string name="app_name">Asclepius</string>
    <string name="gallery">Galeri</string>
    <string name="analyze">Analyze</string>
    <string name="result">Hasil Analisis</string>
    <string name="images_des">Hasil Analisis</string>
    <string name="result_title">Analysis Result</string>
    <string name="share_title">Share</string>
    <string name="back_title">Back</string>
    <string name="hamburger_menu">Menu</string>
    <string name="news_title">News Article</string>
    <string name="news_image">News Image</string>
    <string name="news">News Title</string>
    <string name="news_author">By: </string>
    <string name="news_publisher">Publisher</string>
    <string name="open_in_browser">Browsing</string>
    <string name="publish_date">Published at 2024</string>
    <string name="read_your_news">Stay informed, stay inspired! Read your latest news here.</string>
    <string name="detection_result">Detection Result</string>
    <string name="detection_image">Detection Image</string>
    <string name="detection_date">Detection Date</string>
    <string name="delete_detection">Delete Detection</string>
    <string name="cancer_type_and_percent">Cancer 0%</string>
    <string name="history_title">Detection History</string>
    <string name="failed_to_crop_image">Failed to crop image</string>
    <string name="view_detection_history">View Your Detection History</string>
    <string name="save_title">Save</string>
    <string name="classifier_init_error">Failed to initialize image classifier.</string>
    <string name="image_load_error">Unable to load image from the provided URI.</string>
    <string name="classification_process_error">Classification process encountered an error. Please try again.</string>
    <string name="inference_execution_error">An error occurred during inference execution.</string>
    <string name="choose_picture">Choose a Picture</string>
    <string name="failed_get_image_uri">Failed to get image URI</string>
    <string name="crop_error">Crop error: %1$s</string>
    <string name="image_classifier_failed">Image classification failed. Please try again.</string>
    <string name="toast_delete_success">Data deleted successfully.</string>
    <string name="toast_save_success">Data saved successfully.</string>
    <string name="toast_delete_cancelled">Deletion cancelled.</string>
    <string name="delete_confirmation_title">Confirm Deletion</string>
    <string name="delete_confirmation_message">Are you sure you want to delete this entry?</string>
    <string name="delete_confirmation_positive">Yes</string>
    <string name="delete_confirmation_negative">No</string>
    <string name="news_description">Berita BOLA HARI INIIII</string>
    <string name="toast_fetch_failed">Failed to fetch data</string>
</resources>